# crypto-seed-gen

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/mnemonics/: bip39.rs  mod.rs
