[package]
authors = ["Anton Kosovskii"]
edition = "2018"
name = "crypto-seed-gen"
version = "2.4.0"
readme = "README.md"
documentation = "https://github.com/NuperSu/crypto-seed-gen"
homepage = "https://github.com/NuperSu/crypto-seed-gen"
repository = "https://github.com/NuperSu/crypto-seed-gen"
license = "GPL-3.0-or-later"
keywords = ["cryptocurrency", "wallet", "bitcoin", "monero", "ethereum", "mnemonic", "seed"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
description = "This is a utility to generate cool seed phrases of 12 and 24 words."

[lib]
name = "crypto_seed_gen"
path = "src/lib.rs"

[[bin]]
name = "crypto-seed-gen"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.40"
bitcoin = "^0.26.0"
clap = "^2.33.3"
failure = "^0.1.8"
hex = "^0.4.3"
rand = {version = "^0.8.3", features = ["getrandom"]}
rand_chacha = "^0.3.0"
rand_core_5 = {version = "^0.5.1", package = "rand_core"}
rand_hc = "^0.3.0"
rand_jitter = "^0.3.0"
rdrand = "^0.8.0"
scrypt = "^0.7.0"
secp256k1 = "^0.20.2"
secp256k1_17 = {version = "^0.17.2", package = "secp256k1"}
thiserror = "^1.0.24"
tiny-bip39 = "^0.8.0"
trompt = "^0.0.4"
unicode-normalization = "^0.1.17"
wagyu-ethereum = "^0.6.3"
wagyu-model = "^0.6.3"
wagyu-monero = "^0.6.3"
zeroize = "^1.3.0"

[profile.release]
lto = "fat"
